New version of HANA system refresh scripts

--- a/scripts/SnapCenter/HANA/sc-system-refresh-SID.cfg
+++ b/scripts/SnapCenter/HANA/sc-system-refresh-SID.cfg
@@ -3,8 +3,10 @@
 # ---------------------------------------------
 
 # hdbuserstore key, which should be used to connect to the target database
-KEY="SIDKEY"
+KEY="SM1KEY"
 
-# Used storage protocol, NFS or SAN
-PROTOCOL="NFS"
+# Used storage protocol, NFSv3, NFSv4.1 or SAN
+PROTOCOL="NFSv3"
+#PROTOCOL="NFSv4.1"
+#PROTOCOL="SAN"
 
